--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "joye",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon -w ./dist -i ./node_modules ./dist/index.js"
+    "watch": "tsc -w",
+    "start": "nodemon -w ./dist -i ./node_modules ./dist/index.js"
   },
   "bin": {
-    "clproxy": "./dist/bin.js"
+    "shproxy": "./dist/bin.js"
   },
   "dependencies": {
     "@types/commander": "^2.12.2",
@@ -20,7 +21,6 @@
     "chalk": "^3.0.0",
     "commander": "^4.1.1",
     "koa": "^2.11.0",
-    "koa-body": "^4.1.1",
     "lodash": "^4.17.15",
     "nodemon": "^2.0.2",
     "tough-cookie": "^3.0.1",
