--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
-    "start": "nodemon -w ./dist -i ./node_modules ./dist/index.js"
-  },
-  "bin": {
-    "shproxy": "./dist/bin.js"
+    "dev": "nodemon -w ./dist -i ./node_modules ./dist/index.js",
+    "daemon": "pm2 start ./pm2.config.js --env production"
   },
   "dependencies": {
     "@types/commander": "^2.12.2",
@@ -23,6 +21,7 @@
     "koa": "^2.11.0",
     "lodash": "^4.17.15",
     "nodemon": "^2.0.2",
+    "pm2": "^4.2.3",
     "tough-cookie": "^3.0.1",
     "typescript": "^3.8.2"
   }
